style.css
html, body, .app-container{
	background: url('images/bg.png');
	font-family: 'Open Sans', sans-serif;
	height: 100%;
	margin: 0;
	width: 100%;
}

#user-label {
	background-color: #333;
	border-radius: 10px;
	color: white;
	height: 20px;
	margin-right: 50px;
	margin-top: 10px;
	padding: 10px;
	position: fixed;
	right: 0;
	text-align: center;
	top: 0;
	width: 200px;
	z-index: 3;
}

#map-canvas {
	height: 100%;
	margin: 0;
	padding: 0;
	z-index: 1;
}

#login-button {
	background: url('images/icon_fb_login.png');
	color: white;
	cursor: pointer;
	height: 450px;
	left: 50%;
	padding-top: 50px;
	position: absolute;
	text-align: center;
	top: 50%;
	transform: translate(-50%,-50%);
	width: 500px;
	z-index: 3;
}

#login-button:hover {
	background: url('images/icon_fb_login_hover.png');
	color: #3b5998;
}

#overlay {
	background: black;
	height: 100%;
	opacity: 0.5;
	position: fixed;
	top: 0;
	width: 100%;
	z-index: 2;
}


 /*  FOOD TRUCK POP UP */
#foodTruckPopupContainer {
  height: 200px;
  width: 400px;
}

.pop-up-rating {
  unicode-bidi: bidi-override;
  direction: rtl;
  float: left;
}
.pop-up-rating > span {
  display: inline-block;
  position: relative;
  width: 1.1em;
}
/*.pop-up-rating > span:hover:before,
.pop-up-rating > span:hover ~ span:before {
   content: "\2605";
   position: absolute;
}*/

#more-details-div {
  clear: both;
}

/* Food Truck page */
#foodtruckpage-main {
  background: white;
  left: 50%;
  padding: 30px;
  position: absolute;
  top: 30%;
  transform: translate(-50%, -30%);
}

#foodtruckdetails-div {
  font-weight: bold;
}

/* Memo Section */
textarea {
  font-family: 'Open Sans', sans-serif;
  font-size: 15pt;
  padding: 5px;
  width: 96.8%;
}

button {
  display: inline;
  font-size: 10pt;
  height: 30px;
  margin-top: 5px;
  max-width: 49%;
  width: 100%;
}

/* Ratings Section */
.ratings {
  font-size: 20pt;
  list-style: none;
}

ul.ratings li {
  cursor: pointer;
  display: inline;
}

ul > span {
  float: right;
  font-size: 14pt;
  margin-right: 50px;
  padding: 5px;
}


/* Comments section */

